# gemini_rs

./: .gitignore  Cargo.toml  README.md  config.toml
examples/: config.toml.example  index.gmi
src/: main.rs
