[package]
name = "gemini_server"
version = "0.1.0"
authors = ["connor <connormullett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["logging"]
logging = ["log"]

[dependencies]
log = { version = "0.4.4", optional = true }
env_logger = "0.8.2"
native-tls = "0.2.7"
